--- a/app/package.json
+++ b/app/package.json
@@ -4,7 +4,7 @@
   "description": "Cost Management Express.js App",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js"
   },
   "author": "Anastasia Hamandritov & Shirel Bitan",
   "license": "ISC",
